# graphiti-mcp-pro

./: .dockerignore  .env.example.cn  .env.example.en  .gitignore  Dockerfile  Makefile  README.md  README_CN.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: build.yml
config/: __init__.py  constants.py  exceptions.py  manager.py  models.py  sources.py
graphiti_pro_core/: __init__.py  main.py
graphiti_pro_core/clients/: __init__.py  __state__.py  embedder.py  graphiti.py  llm.py  reranker.py
graphiti_pro_core/mcp_server/: __init__.py  __state__.py  entities.py  helpers.py  instructions.py  resources.py  server.py  settings.py  stateful_fastmcp.py  types.py
graphiti_pro_core/mcp_server/tools/: __init__.py  utils.py
graphiti_pro_core/mcp_server/tools/entity/: __init__.py  delete_entity_edge.py  get_entity_edge.py
graphiti_pro_core/mcp_server/tools/episode/: __init__.py  delete_episode.py  get_episodes.py
graphiti_pro_core/mcp_server/tools/graph/: __init__.py  clear_graph.py
graphiti_pro_core/mcp_server/tools/memory/: __init__.py  add_memory.py  search_memory_facts.py  (+1 more)
hack/: build-mcp-image.sh
manager/backend/: app.py  config.py  crypto.py  database.py  models.py  scheduler.py  settings_model_generator.py
manager/backend/api/: logs.py  mcp.py  settings.py  token_usage.py
manager/frontend/: Caddyfile  Dockerfile  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
manager/frontend/src/: App.tsx  index.css  types.d.ts
utils/: __init__.py  is_.py  logger.py  manager_backend_ctx.py  usage_collector.py
(+57 files in other folders)
